# Human-Tracks-Project

./: .gitignore  AGENTS.md  PRODUCT.md  README.md  provenance-tool.py  pyproject.toml
src/provenance/: __init__.py  c2pa_signer.py  cli.py  daw_auditor.py  loopback_engine.py  pre_register.py  schemas.py  seed_extractor.py
tests/: conftest.py  test_integration.py  test_pipeline.py
